--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="filters">
-    <a class="button bold" (click)="filter='Heads'">Heads</a>
+    <a class="button" (click)="filter='Heads'">Heads</a>
     <a class="button" (click)="filter='Arms'">Arms</a>
     <a class="button" (click)="filter='Torsos'">Torsos</a>
     <a class="button" (click)="filter='Bases'">Bases</a>
@@ -9,24 +9,7 @@
 
   <ul class="products">
     <li class="product-item" *ngFor="let product of getFilteresProducts()">
-      <div class="product">
-        <div class="product-details">
-          <img [src]="getImageUrl(product)" [alt]="product?.name" />
-          <input type="text" value="{{ product?.name }}"/>
-          <div class="product-info">
-            <div class="name">{{ product?.name }}</div>
-            <div class="description">{{ product?.description }}</div>
-            <div class="category">Part Type: {{ product?.category }}</div>
-          </div>
-        </div>
-        <div class="price">
-          <div *ngIf="product.discount === 0">{{ product.price | currency:'EUR' }}</div>
-          <div *ngIf="product.discount > 0" class="discount">
-            {{ product.price * (1 - product.discount) | currency:'EUR' }}
-          </div>
-          <button class="cta">Buy</button>
-        </div>
-      </div>
+      <bot-product-details [product]="product"></bot-product-details>
     </li>
   </ul>
 </div>
