--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,11 +1,10 @@
 <div class="product">
   <div class="product-details">
-    <img [src]="getImageUrl(product)" [alt]="product?.name" />
-    <input type="text" value="{{ product?.name }}"/>
+    <img [src]="getImageUrl(product)" [alt]="product.name" />
     <div class="product-info">
-      <div class="name">{{ product?.name }}</div>
-      <div class="description">{{ product?.description }}</div>
-      <div class="category">Part Type: {{ product?.category }}</div>
+      <div class="name">{{ product.name }}</div>
+      <div class="description">{{ product.description }}</div>
+      <div class="category">Part Type: {{ product.category }}</div>
     </div>
   </div>
   <div class="price">
@@ -17,6 +16,6 @@
     <div *ngIf="product.discount > 0" class="discount">
       {{ product.price * (1 - product.discount) | currency:'EUR' }}
     </div>
-    <button class="cta" (click)="addToCart(product)">Buy</button>
+    <button class="cta" (click)="buyButtonClicked(product)">Buy</button>
   </div>
 </div>
